ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - example.com
    secretName: example-tls
  rules:
  - host: example.com
    http:
      paths:
      - path: /api1
        pathType: Prefix
        backend:
          service:
            name: app1-deployment
            port:
              number: 80
      - path: /api2
        pathType: Prefix
        backend:
          service:
            name: app2-deployment
            port:
              number: 80
